--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,14 @@
     "description": "Laravel 11.x Front-end preset for now ui dashboard",
     "license": "MIT",
     "homepage": "https://github.com/creativetimofficial/now-ui-dashboard-laravel",
-    "keywords": ["Laravel", "Preset", "Now UI"],
+    "keywords": [
+        "Laravel",
+        "Preset",
+        "Now UI"
+    ],
     "require": {
-        "laravel/framework": "^11.0",
+        "laravel/framework": "^11.0|^12.0",
         "laravel/legacy-factories": "^1.0"
-
     },
     "autoload": {
         "psr-4": {
